--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/RooyyDoe/progressive-web-apps-1920#readme",
   "dependencies": {
-    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "handlebars": "^4.7.3",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.2"
   }
 }
