--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,7 +39,7 @@
             "sizes": "192x192"
         },
         {
-            "src": "/images/icons/Rawg384x3 84.png",
+            "src": "/images/icons/Rawg384x384.png",
             "type": "image/png",
             "sizes": "384x384"
         },
